--- a/src/App.scss
+++ b/src/App.scss
@@ -1,1 +1,7 @@
 @import "~bootstrap/scss/bootstrap";
+
+@import "./scss/variables";
+@import "./scss/mixins";
+@import "./pages/loginPage/LoginPage.scss";
+@import "./pages/mainPage/MainPage.scss";
+@import "./components/Buttons/Buttons.scss";
