--- a/src/App.scss
+++ b/src/App.scss
@@ -5,3 +5,4 @@
 @import "./pages/loginPage/LoginPage.scss";
 @import "./pages/mainPage/MainPage.scss";
 @import "./components/Buttons/Buttons.scss";
+@import "./components/baseButton/BaseButton.scss";
