--- a/src/pages/mainPage/MainPage.scss
+++ b/src/pages/mainPage/MainPage.scss
@@ -5,6 +5,7 @@
   flex-direction: column;
   border: solid 2px black;
   height: 300px;
+  margin-top: 50px;
   h1 {
     @include backColor(black);
     color: $mainColor;
@@ -17,21 +18,7 @@
 .header {
   position: relative;
   align-items: center;
-}
-
-.random-button {
-  width: 115px;
-  height: 115px;
-  @include backColor(rgb(160, 148, 148));
-  color: $mainColor;
-  font-size: $mainFont;
-  border: solid 4px;
-  border-color: grey;
-}
-.random-buttons {
-  width: 690px;
   display: flex;
-  justify-content: space-around;
 }
 
 .buttons-area {
@@ -45,36 +32,6 @@
   .result {
     font-size: 25px;
   }
-}
-
-.stop-button {
-  height: 170px;
-  width: 260px;
-  color: $mainColor;
-  @include backColor(#e99050);
-  font-size: $mainFont;
-  box-shadow: $shadow;
-  border: solid 4px #d75454;
-  margin-left: 30px;
-  &:disabled {
-    height: 170px;
-    width: 260px;
-    color: $mainColor;
-    background-color: rgb(216, 180, 167);
-    font-size: $mainFont;
-    border: none;
-    margin-left: 30px;
-  }
-}
-
-.reset-button {
-  color: $mainColor;
-  @include backColor(rgb(54, 54, 138));
-  width: 320px;
-  font-size: $mainFont;
-  height: 70px;
-  border: solid 4px blue;
-  margin-right: 10px;
 }
 
 .total-click-text {
@@ -96,6 +53,7 @@
     height: 100vh;
     border: none;
     @include mobPage;
+    margin-top: 0;
     h1 {
       margin: 0;
       font-size: $mobFontSize;
@@ -124,41 +82,7 @@
 
   .buttons-area {
     display: block;
-  }
-
-  .random-button {
-    width: 55px;
-    height: 55px;
-    font-size: $mobFontSize;
-  }
-
-  .random-buttons {
-    width: 90%;
-    margin: auto;
-    padding-bottom: 20px;
-  }
-
-  .stop-button {
-    height: 60px;
-    width: 80%;
-    font-size: $mobFontSize;
-    margin-left: auto;
-    margin-top: 70px;
-    &:disabled {
-      height: 60px;
-      width: 90%;
-      font-size: $mobFontSize;
-      margin-left: auto;
-      margin-top: 70px;
-    }
-  }
-
-  .reset-button {
-    font-size: $mobFontSize;
-    height: 60px;
-    width: 90%;
-    margin: auto;
-    margin-top: 60px;
+    margin-top: 50px;
   }
 
   .total-click-text {
