--- a/src/pages/loginPage/LoginPage.scss
+++ b/src/pages/loginPage/LoginPage.scss
@@ -1,111 +1,87 @@
-.loginPage {
+.login {
   width: 75%;
   margin: auto;
-  margin-top: 50px;
-}
-
-.loginForm {
-  border: solid 2px black;
-  margin: auto;
-  display: flex;
-  div {
+  margin-top: 3em;
+  &__label {
+    text-align: center;
+    color: $mainColor;
+    padding: 0.4em;
+    font-size: $mainFont;
+    @include backColor(black);
+    margin: auto;
+  }
+  &__form {
+    border: solid 2px black;
+    margin: auto;
     display: flex;
-    flex-direction: column;
-    width: 50%;
-    align-items: flex-end;
-    margin-right: 100px;
+    div {
+      display: flex;
+      flex-direction: column;
+      margin-right: 7%;
+      width: 50%;
+      align-items: flex-end;
+      span {
+        &:first-child {
+          margin-top: 1em;
+        }
+        font-size: $mainFont;
+        margin-bottom: 1.2em;
+        input {
+          outline-color: cornflowerblue;
+          padding: 3%;
+          width: 180px;
+          height: 60px;
+          margin-left: 1em;
+          font-size: $mainFont;
+        }
+      }
+    }
   }
 }
 
-.loginPage__labelForm {
-  text-align: center;
-  color: $mainColor;
-  padding: 10px;
-  font-size: $mainFont;
-  @include backColor(black);
-  margin: auto;
-}
-
-.loginForm__nameSection__nameInput {
-  outline-color: cornflowerblue;
-  padding: 10px;
-  width: 180px;
-  height: 60px;
-  margin-left: 35px;
-  font-size: $mainFont;
-}
-
-.loginForm__lastNameSection__lastNameInput {
-  @extend .loginForm__nameSection__nameInput;
-}
-
-.loginBtn-section {
+.login__btn-section {
   width: 50%;
   display: flex;
   justify-content: flex-end;
   align-items: flex-end;
   font-size: $mainFont;
   a {
-    width: 200px;
-    height: 60px;
+    width: 45%;
     margin: 10%;
   }
-}
-
-.loginForm__nameSection {
-  margin: 20px 0 0px;
-  font-size: $mainFont;
-}
-
-.loginForm__lastNameSection {
-  margin: 20px 0 10%;
-  font-size: $mainFont;
 }
 
 /* RESPONSIVE */
 
 @media (max-width: 576px) {
-  .loginPage {
+  .login {
     @include mobPage;
     height: 100vh;
     margin-top: 0;
-  }
-
-  .loginForm {
-    border: none;
-    font-size: $mobFontSize;
-    display: block;
-    text-align: center;
-    div {
-      @include mobPage;
-      padding-right: 70px;
+    &__label {
+      font-size: $mobFontSize;
+    }
+    &__form {
+      border: none;
+      font-size: $mobFontSize;
+      display: block;
+      text-align: center;
+      div {
+        @include mobPage;
+        padding-right: 20%;
+        span input {
+          max-width: 125px;
+          max-height: 40px;
+          font-size: $mobFontSize;
+        }
+      }
     }
   }
 
-  .loginPage__labelForm {
-    font-size: $mobFontSize;
-    max-height: 55px;
-  }
-
-  .loginForm__nameSection__nameInput {
-    width: 125px;
-    height: 40px;
-    font-size: $mobFontSize;
-  }
-
-  .loginForm__lastNameSection__lastNameInput {
-    @extend .loginForm__nameSection__nameInput;
-  }
-
-  .loginBtn-section {
+  .login__btn-section {
     width: $fullWidth;
     a {
-      width: 500px;
-      height: 30px;
+      width: 100%;
     }
-  }
-
-  .header:first-child {
-    text-align: center;
   }
 }
